fixed the 1px gaps and fixed ad agency portfolio on android tablet

--- a/src/styles/components/content.scss
+++ b/src/styles/components/content.scss
@@ -23,6 +23,9 @@
     margin: 4rem 0;
     &.no-margin {
       margin: 0;
+      @include breakpoint(md) {
+        margin: -1px;
+      }
     }
     &.whitesmoke {
       background-color: dt-color('foreground');
