--- a/src/styles/components/cubes.scss
+++ b/src/styles/components/cubes.scss
@@ -28,6 +28,7 @@
     grid-template-columns: 180px 180px;
     grid-template-rows: 180px 180px 180px 180px 180px;
     padding-top: 40px;
+    justify-content: center;
   }
 }
 
